terraform/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: nodejs-app
  labels:
    app: nodejs-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: nodejs-app
